# basic-chat-template

./: BUGS.md  MANIFEST.in  Makefile  README.md  REASONING_FEATURES.md  app.py  pyproject.toml  pytest.ini  reasoning_engine.py  requirements.txt  setup.py  test_results_latest.md
diagrams/: architecture.md
src/: __init__.py
src/api/: __init__.py  ollama_api.py  web_search.py
src/config/: __init__.py  config.py
src/core/: __init__.py  app.py  document_processor.py
src/database/: __init__.py  database_migrations.py
src/reasoning/: __init__.py  reasoning_engine.py
src/session/: __init__.py  session_manager.py
src/utils/: __init__.py  async_ollama.py  caching.py  enhanced_tools.py
tests/: conftest.py  test_app.py  test_basic.py  test_database_migrations.py  test_enhanced_audio.py  test_enhanced_reasoning.py  test_enhanced_tools.py  test_processing.py  test_reasoning.py  test_session_manager.py  test_voice.py  test_web_search.py
